--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 	<description>Great outdoors gateway ushin zuul</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring-cloud.version>2020.0.0-M5</spring-cloud.version>
 	</properties>
 	
@@ -99,9 +101,14 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+   
+    <configuration>
+        <source>11</source>   <!-- maven.compiler.source  -->
+        <target>11</target> <!-- maven.compiler.target -->
+    </configuration>
+</plugin>
 		</plugins>
 	</build>
 
