--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
+<!--     <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target> -->
 		<spring-cloud.version>2020.0.0-M5</spring-cloud.version>
 	</properties>
 	
@@ -104,10 +104,10 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
    
-    <configuration>
-        <source>11</source>   <!-- maven.compiler.source  -->
-        <target>11</target> <!-- maven.compiler.target -->
-    </configuration>
+  <!--   <configuration>
+        <source>11</source>   maven.compiler.source 
+        <target>11</target> maven.compiler.target
+    </configuration> -->
 </plugin>
 		</plugins>
 	</build>
